Add the groundwork from project 5 with some modified text

--- a/credentialsDontPost/.env
+++ b/credentialsDontPost/.env
@@ -4,4 +4,4 @@ MONGO_CONNECTION_STRING = mongodb+srv://kchen3490:iIRhdyJ0ZArKAx6U@cluster0.xyrl
 MONGO_DB_USERNAME = kchen3490
 MONGO_DB_PASSWORD = iIRhdyJ0ZArKAx6U
 MONGO_DB_NAME = "CMSC335DB"
-MONGO_COLLECTION = "campApplicants"
+MONGO_COLLECTION = "dogPhotos"
